# best403unlocker-qt

./: .clang-format  CMakeLists.txt  README.md
assets/: resources.qrc
assets/style/: main.qss
include/: mainwindow.h
include/widget/: dnswidget.h
src/: dnswidget.cpp  main.cpp  mainwindow.cpp
src/config/: configmanager.cpp  configmanager.h
src/network/: dnstester.cpp  dnstester.h
src/widget/: dnsstatuswidget.cpp  dnsstatuswidget.h  dnswidget.cpp  dnswidget.h  mainwindow.cpp  mainwindow.h
ui/: dnsstatuswidget.ui  dnswidget.ui  dockerwidget.ui  logwidget.ui  mainwindow.ui
